fixed positioning of elements. Next on todo list is optimize the scaling of items. THe Cards a re fixed size and trail off screen. The polaroids change size on vh/vw change. Stack items in same output div. COlumns upon exiting viewheight.

--- a/Polaroids.css
+++ b/Polaroids.css
@@ -25,12 +25,13 @@ body {
     width: 100vw;
   font-family: 'Poor Story', cursive;
   background: #fff;
+  text-align: center;
 }
-.z-index{
+/* .z-index{
     z-index: 1;
-}
+} */
 .background{
-    position: absolute;
+    position: fixed;
     z-index: 0;
     width: 100%;
     height: 100%;
@@ -42,6 +43,7 @@ body {
 }
 
 .wrapper {
+  position: absolute;
   width: 100%;
   padding: 0 2rem;
   text-align: center;
@@ -78,6 +80,28 @@ body {
   transition: all 0.35s;
 }
 
+/* Z- Indexes */
+.z0{
+  z-index: 0;
+}
+.z1{
+  z-index: 1;
+}
+
+.z2{
+  z-index: 2;
+}
+
+h1{
+  position: relative;
+  display: inline;
+
+}
+button{
+  display: inline;
+  position: relative;
+}
+
 /* .item:hover {
   filter: none;
   transform: scale(1, 1) rotate(0deg) !important;
@@ -95,4 +119,6 @@ body {
   box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
   transition: all 0.35s;
 } */
+
+
 
